--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ transition: 0.5s;
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse" id="#nav">
+            <div class="collapse navbar-collapse" id="nav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a href="#" class="nav-link">HOME</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">ABOUT</a></li>
