--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ transition: 0.5s;
         <div class="container">
             <a style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 30px;" href="#" class="navbar-brand">YUMMY..</a>
 
-            <button class="navbar-toggler" data-bs-toggel="collapse" data-bs-target="#nav">
+            <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
